syntax = "proto3";
package echoserver;

option go_package = "k8s-study/echoserver";

message GreetingMessage {}

message GreetingReply {
    string hostname = 1;
    string client_address = 2;
    string auth_info = 3;
}

service HelloWorld {
    rpc Greeting (GreetingMessage) returns (GreetingReply) {};
}